--- a/templates/form.html
+++ b/templates/form.html
@@ -7,3 +7,13 @@
 
     <button type="submit">Submit</button>
 </form>
+<p>Ha még nem vagy tag, itt regisztrálhatsz:</p>
+<form method="post" action="/reg">
+    <input type="email" name="regusername" placeholder="Enter your username">
+    <br>
+
+    <input type="password" name="regpassword" placeholder="Enter password">
+    <br>
+
+    <button type="submit">Submit</button>
+</form>
